--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,9 @@
   "version": 2,
   "builds": [
     {
-      "src": "emp_app/wsgi.py",
+      "src": "office_emp_proj/wsgi.py",
       "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.10" }
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     },
     {
       "src": "build_files.sh",
@@ -22,7 +22,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "poll/wsgi.py"
+      "dest": "office_emp_proj/wsgi.py"
     }
   ]
 }
